--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     implementation("androidx.room:room-ktx:2.6.1")
     kapt("androidx.room:room-compiler:2.6.1")
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "io.insert-koin:koin-androidx-compose:3.4.0"
 }
